RESOLVED FIXED 56953
[GTK] GTK's DRT to ouput detail's string for the 'property-change' signal
https://bugs.webkit.org/show_bug.cgi?id=56953
Summary [GTK] GTK's DRT to ouput detail's string for the 'property-change' signal
Mario Sanchez Prada
Reported 2011-03-23 12:44:38 PDT
Currently the GTK's DRT outputs some lines related to accessibility events when accessibilityController.logAccessibilityEvents() is called, what is nice but not enough for the case of the 'property-change' signal :-) We'd need also that the string associated to the 'detail' were output as well for the 'property-change' signal, so we were able to check when some properties (such as 'accessible-value') changes, hence this bug. Blocking bug 56655 as we need this feature in DRT to properly test the patch there.
Attachments
Patch proposal (2.27 KB, patch)
2011-03-23 12:54 PDT, Mario Sanchez Prada
mrobinson: review+
Mario Sanchez Prada
Comment 1 2011-03-23 12:46:52 PDT
Forgot to mention I was talking AtkObject's 'property-change' signal
Mario Sanchez Prada
Comment 2 2011-03-23 12:54:01 PDT
Created attachment 86672 [details] Patch proposal Attached patch proposal
Martin Robinson
Comment 3 2011-03-23 13:32:17 PDT
Comment on attachment 86672 [details] Patch proposal Okay!
Mario Sanchez Prada
Comment 4 2011-03-23 15:02:41 PDT
Note You need to log in before you can comment on or make changes to this bug.