2011-03-23  Mario Sanchez Prada  <msanchez@igalia.com>

Reviewed by Martin Robinson.

        [GTK] GTK's DRT to ouput detail's string for the 'property-change' signal
        https://bugs.webkit.org/show_bug.cgi?id=56953

        Print the string for the detail of 'property-change' signal.

        * DumpRenderTree/gtk/AccessibilityCallbacks.cpp:
        (axObjectEventListener): Print the detail string.

Canonical link: https://commits.webkit.org/71633@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81810 268f45cc-cd09-0410-ab3c-d52691b4dbfc